# traning

./: .Renviron.example  .gitignore  DESCRIPTION  pyproject.toml
R/: advanced_metrics.R  daterange.R  garmin_json.R  health_export.R  hr_zones.R  import.R  metrics.R  physiology.R  plot.R  plot_health.R  plot_reports.R  plot_zones.R  readiness.R  report.R  utils.R
app/tRanat/: app.R  global.R  server.R  ui.R
app/tRanat/modules/: mod_date_preset.R  mod_metric_panel.R  mod_overview.R
app/tRanat/pages/: page_health.R  page_overview.R  page_performance.R  page_progress.R  page_race.R  page_training.R
app/tRanat/www/: styles.css
docs/: changelog.md  roadmap.md
docs/dev/: garmin-fetch-design.md  pipeline-design.md
docs/user/: cli-reference.md  garmin-fetch-setup.md  garmin-fetch-usage.md  pipeline-setup.md
inst/: cli.R  mcp_bridge.R
python/: backfill_tcp.py  garmin_auth.py  garmin_download.py  garmin_fetch.py  garmin_utils.py  requirements.txt  setup_venv.sh
python/traning_cli/: main.py
python/traning_cli/garmin/: __init__.py  auth.py  download.py  utils.py
python/traning_cli/health/: __init__.py  backfill.py  inbox.py  tcp.py  utils.py
r/: gor_sa_har.r  read_my_fit.r
r/tRanat/: server.R  ui.R
r_aw/: .Renviron.example  .gitignore  aw_heartrate.r
scripts/: garmin_fetch_import.sh  install_r_deps.sh  migrate_to_canonical.py
tests/: testthat.R
tests/testthat/: test-daterange.R  test-decoupling.R  test-health-export.R  test-hr-zones.R  test-mcp-bridge.R  test-readiness.R  test-report-advanced.R  test-report-basic.R  test-utils.R
(+19 files in other folders)
